added styling to details page

--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -1,29 +1,113 @@
 html, body {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 body {
-  background: #F5F7FA;
+    background: #F5F7FA;
+}
+table {
+    border-collapse: collapse;
+    font-size: 14px;
+    width: 100%
+}
+td {
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .logo {
-  display: block;
-  height: 100px;
-  margin: 50px auto;
+    display: block;
+    height: 100px;
+    margin: 50px auto;
+    width: 20%;
 }
 .big {
-  font-size: 25px;
+    font-size: 25px;
+}
+.build-info {
+    margin: 0 auto;
+    width: 70%;
+}
+.column-header {
+    padding: 10px 0;
+    text-align: left;
+}
+.column-status {
+    text-align: center;
+    width: 7.5%;
+}
+.column-file {
+    width: 37.5%;
+}
+.column-bundle {
+    padding: 0 10px;
+    width: 25%;
+}
+.column-now {
+    width: 10%;
+}
+.column-diff {
+    width: 10%;
+}
+.column-max {
+    width: 10%;
+}
+.row-header {
+    background-color: #fafafa;
+    height: 50px;
+}
+.cell-status {
+    text-align: center;
+}
+.cell-pass {
+    color: #38c099;
+}
+.cell-warn {
+    color: #ffcd52;
+}
+.cell-fail {
+    color: #d54400
+}
+.cell-removed {
+    color: #4a81ea
 }
 .dark {
-  color: #192235;
+    color: #192235;
 }
 .light {
-  color: #969FA5;
+    color: #969FA5;
 }
 .card {
-  width: 80%;
-  margin: 0 auto;
-  padding: 25px;
-  background: #FFF;
-  border-radius: 5px;
-  box-shadow: 0px 3px 5px 2px rgba(201, 214, 255, 0.15);
+    width: 70%;
+    margin: 0 auto;
+    padding: 25px;
+    background: #FFF;
+    border-radius: 5px;
+    box-shadow: 0px 3px 5px 2px rgba(201, 214, 255, 0.15);
+}
+.progress-bar-container {
+    padding: 0 10px;
+}
+.progress-bar {
+    float: left;
+}
+.progress-bar-last-size {
+    background-color: #000051;
+    height: 12px;
+}
+.progress-bar-pass {
+    background-color: #38c099;
+    height: 12px;
+}
+.progress-bar-warn {
+    background-color: #ffcd52;
+    height: 12px;
+}
+.progress-bar-fail {
+    background-color: #d54400;
+    height: 12px;
+}
+.progress-bar-remaining {
+    background-color: #f4f6f8;
+    height: 12px;
 }
