put logo on github CDN

--- a/src/views/results.mustache
+++ b/src/views/results.mustache
@@ -7,7 +7,7 @@
 <body>
 <header>
     <div class="logo">
-        <object type="image/svg+xml" data="/static/logo-large.svg">
+        <object type="image/svg+xml" data="https://cdn.rawgit.com/bundlesize/bundlesize.io/master/docs/_assets/logo-large.svg">
           Your browser does not support SVG
         </object>
     </div>
