--- a/src/static/results-styles.css
+++ b/src/static/results-styles.css
@@ -110,8 +110,12 @@ td {
     background: #FFF;
     box-shadow: 0px 3px 5px 2px rgba(201, 214, 255, 0.15);
 }
-.progress-bar-container {
+.progress-bar-cell {
     padding: 0 10px;
+}
+.progress-bar-container {
+    background-color: #f4f6f8;
+    height: 12px;
 }
 .progress-bar {
     float: left;
@@ -124,15 +128,16 @@ td {
     background-color: #38c099;
     height: 12px;
 }
+.progress-bar-pass-negative {
+    background-color: #000051;
+    opacity: 0.5;
+    height: 12px;
+}
 .progress-bar-warn {
     background-color: #ffcd52;
     height: 12px;
 }
 .progress-bar-fail {
     background-color: #d54400;
-    height: 12px;
-}
-.progress-bar-remaining {
-    background-color: #f4f6f8;
     height: 12px;
 }
