--- a/src/views/results.mustache
+++ b/src/views/results.mustache
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>Bundlesize Build Results</title>
+    <title>bundlewatch Build Results</title>
     <link href="/static/results-styles.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -11,8 +11,8 @@
 <body>
 <header>
     <div class="logo">
-        <a target="_blank" href="http://bundlesize.io/">
-            <img src="https://cdn.rawgit.com/bundlesize/bundlesize.io/master/docs/_assets/logo-large.svg">
+        <a target="_blank" href="http://bundlewatch.io/">
+            <img src="https://cdn.rawgit.com/bundlewatch/bundlewatch.io/master/docs/_assets/logo-large.svg">
         </a>
     </div>
 </header>
