--- a/src/views/results.mustache
+++ b/src/views/results.mustache
@@ -128,6 +128,11 @@
         <a href="http://bundlewatch.io">BundleWatch.io</a> |
         <a href="https://github.com/bundlewatch/bundlewatch/issues">Report an Issue</a>
     </div>
+    <div class="server-commit-sha">
+        <p>
+            <a href="https://github.com/bundlewatch/service/commit/{{serverCommitSha}}">{{serverCommitSha}}</>
+        </p>
+    </div>
 </footer>
 
 
